refactor: Modify entitiy to dto